# Tourism_Management_System

./: README.md  pyproject.toml
tourism/: .env
tourism/adminuser/: forms.py  urls.py  views.py
tourism/adminuser/templates/adminuser/: add_guides.html  add_packages.html  base.html  change_password.html  dashboard.html  header.html  manage-bookings.html  manage-users.html  manage_bookings.html  manage_guides.html  manage_packages.html  manage_users.html  profile.html  sidebar.html  update_guides.html  update_packages.html  user_bookings.html
tourism/app/: admin.py  forms.py  models.py  urls.py  views.py
tourism/app/migrations/: 0001_initial.py  0002_alter_tourpackage_rating.py  0003_alter_booking_user_contact.py  0003_contact.py
tourism/app/templates/app/: bookings.html  change-password.html  contact.html  guides.html  home.html  package-details.html  package_details.html  package_list.html  packages.html  profile.html  thankyou.html  tour-history.html  tour_history.html
tourism/authapi/: admin.py  forms.py  models.py  urls.py  views.py
tourism/authapi/migrations/: 0001_initial.py
tourism/authapi/templates/authapi/: logout.html  signin.html  signup.html
tourism/static/css/: dashboard_style.css  style.css
tourism/templates/: base.html  footer.html  header.html
tourism/tourism/: settings.py  urls.py
