[tool.poetry]
name = "tourism-management-system"
version = "0.1.0"
description = ""
authors = ["Takib Yeasar <mdtakibyeasar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-cors-headers = "^4.3.1"
pillow = "^10.3.0"
setuptools = "^70.0.0"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
